brat/test/golden/kernel/duplicate_abs.brat.golden
Error in test/golden/kernel/duplicate_abs.brat@5:8
h2 = { p, p => f(p) }
       ^^^^

  Type error: Variable(s) defined twice: p

